app/javascript/styles/brighteon-social/diff.scss
/* ... */
.admin-wrapper {
  .simple_form input[type=text]::placeholder {
    color: #999;
  }
  .dashboard__widgets__features {
    li {
      a {
        color: $white;
      }
    }
  }
  .dashboard__widgets__versions {
    li {
      color: $white;
    }
  }
  .dashboard__widgets__space {
    li {
      color: $white;
    }
  }
  .dashboard__widgets__config {
    li {
      color: $white;
    }
  }
  .dashboard__widgets__trends {
    ul li a, ul li span {
      color: $white;
    }
  }
  .dashboard__counters__label {
    color: $black;
  }
}

.footer-inner {
  @media screen and (max-width: 600px) {
    flex-direction: column;
    align-items: center;
  }
}

.account__header__fields dt,
.account__header__fields dd {
  color: $black;
}

.compose-form .compose-form__warning {
  background-color: #08083f;
  color: $white;
}

.conversation__content__names > span {
  color: $black;
}

.announcements {
  min-height: 95px;
  &__container {
    background-color: $black;
    color: $white;
    width: 100%;

    .announcements__item {
      padding-right: 90px;
      text-align: center;
      display: block;

      &__content {
        display: inline-block;
        width: calc(100% - 30px);

        & + .icon-button {
          color: $white;
        }

        p {
          overflow: hidden;
          display: -webkit-box;
          -webkit-line-clamp: 3;
          -webkit-box-orient: vertical;
        }
      }
    }
  }
}

.announcements__pagination {
  .icon-button {
    color: $white;
  }
}

.announcements-list__item__title {
  color: $black;
}
/* ... */

